<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:padding="@dimen/padding_all">

        <LinearLayout
            android:id="@+id/wrapper_main_activity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_alignParentTop="true">

            <EditText
                android:id="@+id/et_name_main_activity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                android:hint="@string/activity_main_name"/>

            <EditText
                android:id="@+id/et_phone_main_activity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/activity_main_phone"
                android:inputType="phone"/>

            <TextView
                android:id="@+id/tv_studies_main_activity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:paddingStart="@dimen/padding_start_activity_main"
                android:textColor="@color/black"
                android:text="@string/activity_main_studies"/>

            <Spinner
                android:id="@+id/sp_studies_main_activity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/tv_gender_main_activity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:paddingStart="@dimen/padding_start_activity_main"
                android:text="@string/activity_main_gender"/>

            <RadioGroup
                android:id="@+id/rd_gender_main_activity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rb_female_main_activity"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/activity_main_female"/>

                    <RadioButton
                        android:id="@+id/rb_male_main_activity"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/activity_main_male"/>

            </RadioGroup>

            <TextView
                android:id="@+id/tv_book_main_activity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:paddingStart="@dimen/padding_start_activity_main"
                android:textColor="@color/black"
                android:text="@string/activity_main_favorite"/>

            <AutoCompleteTextView
                android:id="@+id/actv_book_main_activity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/activity_main_favorite_hint"/>

            <CheckBox
                android:id="@+id/chb_sports_main_activity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/activity_main_sports"/>
        </LinearLayout>

        <Button
            android:id="@+id/btn_clean_main_activity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/activity_main_clean"/>

    </RelativeLayout>
</layout>
